Zet een Tomcat 5.5 server op U: (kan ook M: zijn hoor) en zorg dat je daar dwo.war op kan installeren.
Bugje in DBAccessIF geen void return toegestaan. Was er even  tussendoor geslipt.



git-svn-id: https://svn.science.uu.nl/repos/project.fisme.java/DWO/trunk@2870 58dd2db4-0f11-0410-9df4-da15f00f50bd